tests/TestDeca/version1.1/src/test/deca/syntax/invalid/provided/no_braces.deca


/*

this makes sure we put braces for 
the main programm definition


*/



println("No braces");